--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "scripts": {
         "start": "node main.js"
     },
-    "main": "main.js"
+    "main": "main.js",
+    "dependencies": {
+        "express": "*"
+    }
 }
